browser/app/winlauncher/SameBinary.h
@@ -13,7 +13,62 @@
 
 namespace mozilla {
 
-static inline mozilla::LauncherResult<bool> IsSameBinaryAsParentProcess() {
+class ProcessImagePath final {
+  PathType mType;
+  LauncherVoidResult mLastError;
+
+  // Using a larger buffer because an NT path may exceed MAX_PATH.
+  WCHAR mPathBuffer[(MAX_PATH * 2) + 1];
+
+ public:
+  // Initialize with an NT path string of a given process handle
+  explicit ProcessImagePath(const nsAutoHandle& aProcess)
+      : mType(PathType::eNtPath), mLastError(Ok()) {
+    DWORD len = mozilla::ArrayLength(mPathBuffer);
+    if (!::QueryFullProcessImageNameW(aProcess.get(), PROCESS_NAME_NATIVE,
+                                      mPathBuffer, &len)) {
+      mLastError = LAUNCHER_ERROR_FROM_LAST();
+      return;
+    }
+  }
+
+  // Initizlize with a DOS path string of a given imagebase address
+  explicit ProcessImagePath(HMODULE aImageBase)
+      : mType(PathType::eDosPath), mLastError(Ok()) {
+    DWORD len = ::GetModuleFileNameW(aImageBase, mPathBuffer,
+                                     mozilla::ArrayLength(mPathBuffer));
+    if (!len || len == mozilla::ArrayLength(mPathBuffer)) {
+      mLastError = LAUNCHER_ERROR_FROM_LAST();
+      return;
+    }
+  }
+
+  bool IsError() const { return mLastError.isErr(); }
+
+  const WindowsErrorType& GetError() const { return mLastError.inspectErr(); }
+
+  FileUniqueId GetId() const { return FileUniqueId(mPathBuffer, mType); }
+
+  bool CompareNtPaths(const ProcessImagePath& aOther) const {
+    if (mLastError.isErr() || aOther.mLastError.isErr() ||
+        mType != PathType::eNtPath || aOther.mType != PathType::eNtPath) {
+      return false;
+    }
+
+    UNICODE_STRING path1, path2;
+    ::RtlInitUnicodeString(&path1, mPathBuffer);
+    ::RtlInitUnicodeString(&path2, aOther.mPathBuffer);
+    return !!::RtlEqualUnicodeString(&path1, &path2, TRUE);
+  }
+};
+
+enum class ImageFileCompareOption {
+  Default,
+  CompareNtPathsOnly,
+};
+
+static inline mozilla::LauncherResult<bool> IsSameBinaryAsParentProcess(
+    ImageFileCompareOption aOption = ImageFileCompareOption::Default) {
   mozilla::LauncherResult<DWORD> parentPid = mozilla::nt::GetParentProcessId();
   if (parentPid.isErr()) {
     return LAUNCHER_ERROR_FROM_RESULT(parentPid);
@@ -33,24 +88,53 @@ static inline mozilla::LauncherResult<bool> IsSameBinaryAsParentProcess() {
     return LAUNCHER_ERROR_FROM_WIN32(err);
   }
 
-  // Using a larger buffer for this call because we're asking for the native NT
-  // path, which may exceed MAX_PATH.
-  WCHAR parentExe[(MAX_PATH * 2) + 1] = {};
-  DWORD parentExeLen = mozilla::ArrayLength(parentExe);
-  if (!::QueryFullProcessImageNameW(parentProcess.get(), PROCESS_NAME_NATIVE,
-                                    parentExe, &parentExeLen)) {
-    return LAUNCHER_ERROR_FROM_LAST();
+  ProcessImagePath parentExe(parentProcess);
+  if (parentExe.IsError()) {
+    return ::mozilla::Err(parentExe.GetError());
   }
 
-  WCHAR ourExe[MAX_PATH + 1] = {};
-  DWORD ourExeOk =
-      ::GetModuleFileNameW(nullptr, ourExe, mozilla::ArrayLength(ourExe));
-  if (!ourExeOk || ourExeOk == mozilla::ArrayLength(ourExe)) {
-    return LAUNCHER_ERROR_FROM_LAST();
+  if (aOption == ImageFileCompareOption::Default) {
+    bool skipFileIdComparison = false;
+
+    FileUniqueId id1 = parentExe.GetId();
+    if (id1.IsError()) {
+      // We saw a number of Win7 users failed to call NtOpenFile with
+      // STATUS_OBJECT_PATH_NOT_FOUND for an unknown reason.  In this
+      // particular case, we fall back to the logic to compare NT path
+      // strings instead of a file id which will not fail because we don't
+      // need to open a file handle.
+#if !defined(STATUS_OBJECT_PATH_NOT_FOUND)
+      constexpr NTSTATUS STATUS_OBJECT_PATH_NOT_FOUND = 0xc000003a;
+#endif
+      const LauncherError& err = id1.GetError();
+      if (err.mError !=
+          WindowsError::FromNtStatus(STATUS_OBJECT_PATH_NOT_FOUND)) {
+        return ::mozilla::Err(err);
+      }
+
+      skipFileIdComparison = true;
+    }
+
+    if (!skipFileIdComparison) {
+      ProcessImagePath ourExe(nullptr);
+      if (ourExe.IsError()) {
+        return ::mozilla::Err(ourExe.GetError());
+      }
+
+      FileUniqueId id2 = ourExe.GetId();
+      if (id2.IsError()) {
+        return ::mozilla::Err(id2.GetError());
+      }
+      return id1 == id2;
+    }
   }
 
-  return mozilla::DoPathsPointToIdenticalFile(parentExe, ourExe,
-                                              mozilla::PathType::eNtPath);
+  nsAutoHandle ourProcess(::GetCurrentProcess());
+  ProcessImagePath ourExeNt(ourProcess);
+  if (ourExeNt.IsError()) {
+    return ::mozilla::Err(ourExeNt.GetError());
+  }
+  return parentExe.CompareNtPaths(ourExeNt);
 }
 
 }  // namespace mozilla
